Fix frame layout on mobile.

--- a/clio/src/ClioApp.module.css
+++ b/clio/src/ClioApp.module.css
@@ -26,8 +26,6 @@ div#root {
 
 .image {
     display: grid;
-    min-height: 512px;
-    min-width: 512px;
 }
 
 img {
